# mcp-vet

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: risky-config.json  safe-config.json
src/mcp_vet/: cli.py  config_discovery.py  models.py  reporters.py  scanner.py
src/mcp_vet/rules/: __init__.py  command.py  metadata.py  prompt_injection.py  secrets.py
tests/: test_cli.py  test_config_discovery.py  test_reporters.py  test_rules.py
