[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-vet"
version = "0.1.0"
description = "Local MCP security and configuration doctor for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "MetaImagine" }]
dependencies = [
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12",
]
keywords = ["mcp", "model-context-protocol", "ai-agent", "security", "scanner"]

[project.scripts]
mcp-vet = "mcp_vet.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
